# prog-2

./: .gitignore  README.md
.github/: copilot-instructions.md  git-commit-template.txt
exercicios/flask_sqlAlchemy/: app.py
exercicios/flask_sqlAlchemy/static/css/: base.css
exercicios/flask_sqlAlchemy/templates/: base.html  busca_tarefas.html  criar_tarefa.html  editar_tarefa.html  index.html  registrar_desenvolvedor.html
exercicios/flask_sqlAlchemySeparado/: app.py  forms.py  model.py  pyproject.toml  routes.py  run.py
exercicios/flask_sqlAlchemySeparado/static/css/: base.css
exercicios/flask_sqlAlchemySeparado/templates/: base.html  index.html
exercicios/projeto-site-flask/static/css/: style.css
exercicios/projeto-site-flask/templates/: atualizar_pedido.html  balcao.html  base.html  cozinha.html
exercicios/revisao/: app.py
exercicios/revisao/templates/: cozinha.html  index.html
exercicios/rpg-game/: pyproject.toml
exercicios/sistema-de-controle-de-leitura/: app.py  pyproject.toml
exercicios/sistema-de-controle-de-leitura/templates/: base.html  index.html
exercicios/site-jinja-cookies/: pyproject.toml
exercicios/site-jinja-cookies/src/site_jinja/static/js/: script.js
exercicios/site-jinja-cookies/src/site_jinja/templates/: contato.html  cozinha.html  tela_pedido.html
exercicios/site-jinja/src/site_jinja/: app.py
exercicios/site-jinja/src/site_jinja/static/css/: style.css
meu-projeto-flask/: app.py  pyproject.toml
notas/: pyproject.toml
notas/src/notas/: nota.py  usuario.py
notas/src/notas/templates/: cadastro.html  login.html
projeto-site-flask/: app.py  pyproject.toml
projeto-site-flask/static/js/: script.js
projeto-site-flask/templates/: index.html  sobre.html
projetos/mini-blog/: app.py  forms.py  models.py  pyproject.toml  routes.py  run.py
projetos/mini-blog/src/mini_blog/: app.py  forms.py
projetos/mini-blog/static/css/: base.css
projetos/mini-blog/templates/: base.html  index.html  login.html
projetos/notas/src/notas/: app.py
projetos/notas/src/notas/templates/: base.html  index.html  mostrar_notas.html
revisao/: pyproject.toml
revisao/templates/: atualizar_pedido.html  base.html
rpg-game/src/rpg_game/: gereciador_jogo.py  guerreiro.py  mago.py  personagem.py
site-jinja/: pyproject.toml
site-jinja-cookies/src/site_jinja/: app.py
site-jinja-cookies/src/site_jinja/templates/: index.html
site-jinja/src/site_jinja/templates/: base.html  cozinha.html  index.html
