[project]
name = "notas"
version = "0.1.0"
description = "Sistema de notas de usuário simples"
authors = [
    {name = "Ana"},
    {name = "Mayara"},
    {name = "Wellington"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
