[project]
name = "revisao"
version = "0.1.0"
description = "revisão"
authors = [
    {name = "Ríad"}
]
requires-python = ">=3.14"
dependencies = [
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
