[project]
name = "site-jinja"
version = "0.1.0"
description = ""
authors = [
    {name = "Wellington", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{include = "site_jinja", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
flask = "^3.1.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"